--- a/code/02.creation-operators/index.html
+++ b/code/02.creation-operators/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>02.creation-operators</h1>
+  <button id="btn">click me</button>
   <script src="./index.ts"></script>
 </body>
 </html>
