--- a/code/index.html
+++ b/code/index.html
@@ -63,6 +63,7 @@
   <ul class="list">
     <li><a href="./01.basic/index.html">01.Basic</a></li>
     <li><a href="././02.creation-operators/index.html">02.Creation Operators</a></li>
+    <li><a href="././03.combination-operators/index.html">03.Combination Operators</a></li>
   </ul>
 </body>
 </html>
