--- a/code/03.combination-operators/index.html
+++ b/code/03.combination-operators/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    body {
+      width: 100%;
+      min-height: 100vh;
+    }
+  </style>
 </head>
 <body>
   <script src="./index.ts"></script>
